1.0.0
Added uses -n and -p options to template to set optionalpackagename and version.
Added git commit and tag options.
Added pip option to templates.
Tidied Makefile.
Added git downloads to templates.
Split templates builder to seperate file.

0.4.26
Added packaging via pip2/3 template.
Updated manpage.
Added userdata to lfspkg.rc.
Fixed not setting cmake options from setup.
Added RUNINSTALLSCRIPTS env var to prevent install scripts being run if desired ( 1 ( default ) run them, 0 dont ).
Fixed LFSPkgSetUp.
Fixed checking for package with ANYVERSION=1.
Fixed checking arch for pkg build script.
Removed hxnormalize command for LFSFunctions.

0.4.25
Fixed removing multple packages at the same time.
Fixed removing packages with multiple build numbers.

0.4.24
Internal release.

0.4.23
Fixed updating packages not removing orphaned files.
Tweaked documentation.
Added perl to template.
Minor update to template file for systemd usage.
Prevented make install overwriting existing config file.
Removed lfspkguser code.
Tweaks for Pi4.
Running  lfspkg --setup now needs to be run as root.
Tweaks to defaults in lfspkg.rc and LFSPkgSetUp.
Removed loading of local rc file, now only uses global rc ie:/etc/lfspkg.rc
Extractarchive function will now guess whether to use tar -x or unzip, can be overridden.

0.4.22
Added 'meson' option to templates.
Fixed bug when entering options with spaces in LFSPkgSetUp.
Added MESONCONFIGOPTIONS to LFSPkgSetUp.
Set pasissive mode on links ftp in findArchive function.
The pkgclean function now removes the /tmp folder from the package.
Added basic sanity check in LFSFunctions.
Fixed building as normal user.
Changed website/email.
Made version for 8.2 backward compatable with older scripts.
Split DB search into "-S" exact search ( regex ) and "-Z" fuzzy search ( ".*regex.*" ).
Setting env var FORCEDOWNLOAD=1 will force download a new source archive.
Auto added ".*" to front and back of search arg to -S.